removed superflous stuff

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="pdfdownload">
       	<a href="slides.pdf">
       	  <img class="titlepageicon" src="assets/pdf.svg" alt="pdf-download" />
-      	  <span class="pdfdltext">download<br>PDF (869 kB)</span>
+      	  <span class="pdfdltext">download<br>PDF (2.6 MB)</span>
       	</a>
       </div>
       <div class="license">
@@ -242,8 +242,6 @@
 	  a cloud service.</dd>
 	<dt><a href="https://yihui.org/knitr/">knitr</a></dt><dd>Dynamic report generation, literate programming</dd>
 	<dt><a href="https://cran.r-project.org/web/packages/checkpoint/index.html">checkpoint</a></dt><dd>A snapshot of all package versions (<i>h/t Andreas</i>)
-	  <pre><code>library(checkpoint)
-	      checkpoint("2015-01-15")</code></pre></dd>
       </dl>
       </div>
     </section>
